# cnsoftbei

./: .gitignore  README.md  SafeOps_答辩演示PPT.pptx  package.json  pyproject.toml  赛题.docx
.github/workflows/: ci.yml
config/: app.yaml  llm.local.yaml.example  llm.yaml  policy.yaml  tools.yaml
demo/: demo_requests.json  sample_audit_events.jsonl
docs/: ARCHITECTURE.md  BEGINNER_OPERATION_MANUAL.md  COMPLETION_MATRIX.md  COVERAGE_NOTES.md  DEFENSE_CHECKLIST.md  DEMO_ASSETS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DESIGN_TECHNICAL_DOCUMENT.md  DEVELOPMENT_LOG.md  ERROR_CODES.md  FEATURE_HIGHLIGHTS_PLAN.md  INITIAL_SUBMISSION.md  KYLIN_VALIDATION_CHECKLIST.md  LLM_INTEGRATION.md  MCP_TOOLS.md  MILESTONES.md  OPERATION_MANUAL.md  SAFETY_GUARDRAILS.md  SCRIPTS.md  SYSTEM_DESIGN.md  TEST_PLAN_AND_REPORT.md  TODO_LIST.md
scripts/: acceptance.ps1  clean.ps1  demo.ps1  mcp-stdio.ps1  package.ps1  report.ps1  show-tools.ps1  stop-web.ps1  test.ps1  validate-config.ps1  verify-package.ps1  web-smoke.ps1  web.ps1
src/safeops_agent/: __init__.py  agent.py  cli.py  config.py  config_check.py  mcp_server.py  mcp_stdio.py  web_server.py
src/safeops_agent/llm/: prompts.py  (+2 more)
tests/: test_agent.py  test_audit.py  test_audit_chain.py  test_config_check.py  test_diagnostics.py  test_llm.py  test_mcp_service.py  test_mcp_stdio.py  test_new_features.py  test_operations.py  test_packaging.py  test_pending_confirm.py  test_policy.py  test_reasoning_chain.py  test_registry.py  test_tools.py  test_web_server.py
web/: app.js  app_logic.js  index.html  styles.css
web/tests/: app_logic.test.js
(+14 files in other folders)
