[project]
name = "safeops-agent"
version = "0.1.0"
description = "A safety-first intelligent operations Agent for Kylin OS."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
safeops-agent = "safeops_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
