[project]
name = "safeops-agent"
version = "0.1.0"
description = "A safety-first intelligent operations Agent for Kylin OS."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0.2"]

[project.optional-dependencies]
test = ["coverage[toml]>=7.6"]

[project.scripts]
safeops-agent = "safeops_agent.cli:main"
safeops-mcp = "safeops_agent.mcp_stdio:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safeops_agent = [
  "resources/config/*.yaml",
  "resources/web/*.html",
  "resources/web/*.css",
  "resources/web/*.js",
]

[tool.coverage.run]
branch = true
source = ["safeops_agent"]

[tool.coverage.report]
fail_under = 70
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"
